--- a/styles.css
+++ b/styles.css
@@ -117,13 +117,23 @@ section {
     gap: 20px;
 }
 
+/* .hero-button {
+    background-color: #121212;
+}
+
+.hero-button:hover {
+    background-color: #121212;
+} */
+
 .hero {
     text-align: center;
     width: 120px;
 }
 
-.hero:hover{
-    color: red;
+.hero:hover {
+    font-size: 20px;
+    transition: transform 0.3s;
+    transform: scale(1.1); /* Увеличение размера */
 }
 
 .hero img {
@@ -328,4 +338,65 @@ footer {
 #contact {
     width: 1350px;
     margin: auto;
+}
+
+
+
+/* Модальное окно */
+.modal {
+    display: none; /* Скрыто по умолчанию */
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4); /* Темный фон */
+}
+
+/* Контент модального окна */
+.modal-content {
+    background-color: white;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    text-align: center;
+    border-radius: 10px;
+}
+
+/* Кнопка закрытия модального окна */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* Стили для изображения и текста */
+.modal img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.modal h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.modal p {
+    font-size: 16px;
+    margin-bottom: 10px;
 }
