--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,38 @@ a:hover {
     text-decoration: underline;
 }
 
+#videos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 50px 0;
+    background-color: #1b1b1b;
+    color: #fff;
+}
+
+.video-category h2 {
+    font-size: 24px;
+    color: #ffd700; 
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.video {
+    width: 100%; 
+    max-width: 1200px;
+    aspect-ratio: 16/9; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.video iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 10px;
+}
+
+
 /* Кнопки */
 button {
     font-family: 'Roboto', sans-serif;
@@ -116,14 +148,6 @@ section {
     padding: 20px;
     gap: 20px;
 }
-
-/* .hero-button {
-    background-color: #121212;
-}
-
-.hero-button:hover {
-    background-color: #121212;
-} */
 
 .hero {
     text-align: center;
