--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* Основные стили */
 body {
     font-family: 'Roboto', sans-serif;
     line-height: 1.6;
@@ -8,14 +7,12 @@ body {
     margin: 0;
 }
 
-/* Заголовки */
 h1, h2, h3, h4 {
     font-weight: 700;
     color: #ffcc00;
     margin-bottom: 10px;
 }
 
-/* Параграфы */
 p {
     margin: 0 0 20px 0;
     font-size: 16px;
@@ -62,8 +59,6 @@ a:hover {
     border-radius: 10px;
 }
 
-
-/* Кнопки */
 button {
     font-family: 'Roboto', sans-serif;
     background-color: #1e90ff;
@@ -96,7 +91,6 @@ input:focus, textarea:focus {
     border-color: #1e90ff;
 }
 
-/* Шапка */
 header {
     background-color: #333;
     padding: 20px 0;
@@ -133,13 +127,11 @@ nav ul li a {
     font-size: 18px;
 }
 
-/* Секции */
 section {
     padding: 50px;
     text-align: center;
 }
 
-/* Секция героев */
 .heroes-list {
     max-width: 1350px;
     display: flex;
@@ -191,28 +183,27 @@ section {
 
 
 .hero.strength:hover h4 {
-    color: #ff0000; /* Красный для силы */
+    color: #ff0000; 
 }
 
 .hero.agility:hover h4 {
-    color: #00ff00; /* Зеленый для ловкости */
+    color: #00ff00; 
 }
 
 .hero.intelligence:hover h4 {
-    color: #00ccff; /* Голубой для интеллекта */
+    color: #00ccff; 
 }
 
 .hero.universal:hover h4 {
-    color: #cc00ff; /* Фиолетовый для универсалов */
+    color: #cc00ff;
 }
 
 .hero img:hover {
     transform: scale(1.1);
 }   
 
-/* Секция новостей */
 #news {
-    width: 1270px;
+    max-width: 1270px;
     margin: 0 auto;
     overflow: hidden;
     background-color: #1e1e1e;
@@ -227,7 +218,7 @@ section {
 
 article {
     margin: auto;
-    width: 1350px;
+    max-width: 1350px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -237,7 +228,7 @@ article {
 
 .news-article {
     margin: auto;
-    width: 1200px;
+    max-width: 1200px;
     display: flex;
     align-items: center;
     justify-content: baseline;
@@ -250,13 +241,27 @@ article {
     box-shadow: 0 4px 15px rgba(255, 204, 0, 0.3);
 }
 
+#tournament {
+    max-width: 1350px;
+}
+
+.tournament-article {
+    max-width: 1350px;
+
+}
+
 .tournament-p {
-    width: 500px;
+    max-width: 500px;
     padding-right: 17px;
 }
 
+/* .tournament-img {
+    max-width: 150px;
+    max-height: 150px;
+} */
+
 .news-image {
-    width: 90px;
+    max-width: 90px;
     margin-right: 15px;
     float: left;
     border-radius: 8px;
@@ -264,7 +269,7 @@ article {
 }
 
 .news-content {
-    width: 800px;
+    max-width: 800px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -293,7 +298,6 @@ article .highlight {
     font-weight: bold;
 }
 
-/* Футер */
 footer {
     background-color: #333;
     padding: 20px;
@@ -308,17 +312,14 @@ footer {
     margin-top: 12px;
 }
 
-/* Стиль для поля поиска */
 #searchBar {
-    width: 1350px;
+    max-width: 1350px;
     padding: 10px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
 }
-
-/* Для ссылок на соц. медии */
 
 #social-media {
     text-align: center;
@@ -342,37 +343,37 @@ footer {
   }
   
   .social-button.facebook {
-    background-color: #3b5998; /* Facebook */
+    background-color: #3b5998; 
   }
   
   .social-button.twitter {
-    background-color: #1da1f2; /* Twitter */
+    background-color: #1da1f2; 
   }
   
   .social-button.instagram {
-    background-color: #c13584; /* Instagram */
+    background-color: #c13584; 
   }
   
   .social-button.youtube {
-    background-color: #ff0000; /* YouTube */
+    background-color: #ff0000;
   }
   
   .social-button:hover {
-    background-color: #000; /* Darker color for hover effect */
+    background-color: #000; 
     transform: scale(1.05); /* Slight zoom effect on hover */
   }
 
   
 #contact {
-    width: 1350px;
+    max-width: 1350px;
     margin: auto;
 }
 
 
 
-/* Модальное окно */
+/* для модальки */
 .modal {
-    display: none; /* Скрыто по умолчанию */
+    display: none; 
     position: fixed;
     z-index: 1000;
     left: 0;
@@ -385,8 +386,8 @@ footer {
 
 /* Контент модального окна */
 .modal-content {
-    background: #1d1d1d; /* Тёмно-серый фон */
-    color: #f1f1f1; /* Светлый текст */
+    background: #1d1d1d;
+    color: #f1f1f1;
     margin: 10% auto;
     padding: 20px;
     border: 2px solid #ba6c16; /* Оранжевое золотистое обрамление */
@@ -395,13 +396,13 @@ footer {
     text-align: left;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.8); /* Глубокая тень */
     border-radius: 12px; /* Плавные грани */
-    font-family: 'Roboto', sans-serif; /* Модный минималистичный шрифт */
+    font-family: 'Roboto', sans-serif;
     position: relative;
 }
 
 /* Кнопка закрытия модального окна */
 .close {
-    color: #ba6c16; /* Оранжевый цвет в стиле золота Dota 2 */
+    color: #ba6c16; 
     font-size: 32px;
     font-weight: bold;
     position: absolute;
@@ -475,3 +476,66 @@ footer {
     max-height: 1000px; /* Достаточно большое значение для вместимости всего списка */
     transition: max-height 0.5s ease-in;
 }
+
+.random-hero-btn {
+    background-color: #6e747b;
+    color: white;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-bottom: 20px;
+}
+
+.random-hero-btn:hover {
+    background-color: #4a4a50;
+}
+
+
+/* Основной стиль контейнера */
+.difficulty-selector {
+    display: inline-flex;
+    align-items: center;
+}
+
+/* Стили для ромбов */
+.diamond {
+    width: 30px;
+    height: 30px;
+    background-color: #363636; /* Цвет неактивного ромба */
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%); /* Создание ромбовидной формы */
+    margin-right: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+/* Стили для активных ромбов */
+.diamond.active {
+    background-color: #fff; /* Цвет активного ромба */
+}
+
+/* Стили для последнего ромба */
+.diamond:last-child {
+    margin-right: 0;
+}
+
+.difficulty-container {
+    display: flex;
+    justify-content: center;
+    margin: 10px 0;
+}
+
+.difficulty-container .diamond {
+    width: 20px;
+    height: 20px;
+    margin: 0 5px;
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    background-color: #ccc;
+}
+
+.difficulty-container .diamond.active {
+    background-color: #ffcc00; /* Цвет активного ромба */
+}
+
+
